--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: Game Jam Development and Design Resources
-description: Game development and design resources from the South Bend Global Game Jam team.
+title: South Bend Global Game Jam Resources
+description: Resources from the South Bend Global Game Jam team.
 theme: jekyll-theme-cayman
